--- a/memory11.html
+++ b/memory11.html
@@ -11,8 +11,9 @@
         
         <h1>Beach trip - Aug. 4</h1>
         <div class="gallery">
-            <div><img src="images/memory11_1.jpg" alt=""><div class="caption">Caption 1</div></div>
-            <div><img src="images/memory11_2.jpg" alt=""><div class="caption">Caption 2</div></div>
+            <img src="images/memory11_1.jpg" alt="">
+<img src="images/memory11_2.jpg" alt="">
+<img src="images/memory11_3.jpg" alt="">
         </div>
         <div class="audio-player">
             <audio controls autoplay>
