--- a/memory1.html
+++ b/memory1.html
@@ -11,8 +11,9 @@
         
         <h1>CAS Concert - Sept. 17</h1>
         <div class="gallery">
-            <div><img src="images/memory1_1.jpg" alt=""><div class="caption">Caption 1</div></div>
-            <div><img src="images/memory1_2.jpg" alt=""><div class="caption">Caption 2</div></div>
+            <img src="images/memory1_1.jpg" alt="">
+<img src="images/memory1_2.jpg" alt="">
+<img src="images/memory1_3.jpg" alt="">
         </div>
         <div class="audio-player">
             <audio controls autoplay>
