--- a/memory10.html
+++ b/memory10.html
@@ -11,8 +11,9 @@
         
         <h1>My Birthday Trip - Jul. 17</h1>
         <div class="gallery">
-            <div><img src="images/memory10_1.jpg" alt=""><div class="caption">Caption 1</div></div>
-            <div><img src="images/memory10_2.jpg" alt=""><div class="caption">Caption 2</div></div>
+            <img src="images/memory10_1.jpg" alt="">
+<img src="images/memory10_2.jpg" alt="">
+<img src="images/memory10_3.jpg" alt="">
         </div>
         <div class="audio-player">
             <audio controls autoplay>
