--- a/memory2.html
+++ b/memory2.html
@@ -11,8 +11,9 @@
         
         <h1>Homecoming - Sept. 21</h1>
         <div class="gallery">
-            <div><img src="images/memory2_1.jpg" alt=""><div class="caption">Caption 1</div></div>
-            <div><img src="images/memory2_2.jpg" alt=""><div class="caption">Caption 2</div></div>
+            <img src="images/memory2_1.jpg" alt="">
+<img src="images/memory2_2.jpg" alt="">
+<img src="images/memory2_3.jpg" alt="">
         </div>
         <div class="audio-player">
             <audio controls autoplay>
