--- a/memory4.html
+++ b/memory4.html
@@ -11,8 +11,9 @@
         
         <h1>2nd CAS Concert & Day in Austin - Nov. 24</h1>
         <div class="gallery">
-            <div><img src="images/memory4_1.jpg" alt=""><div class="caption">Caption 1</div></div>
-            <div><img src="images/memory4_2.jpg" alt=""><div class="caption">Caption 2</div></div>
+            <img src="images/memory4_1.jpg" alt="">
+<img src="images/memory4_2.jpg" alt="">
+<img src="images/memory4_3.jpg" alt="">
         </div>
         <div class="audio-player">
             <audio controls autoplay>
