--- a/memory5.html
+++ b/memory5.html
@@ -11,8 +11,9 @@
         
         <h1>Ice Skating - Dec. 26</h1>
         <div class="gallery">
-            <div><img src="images/memory5_1.jpg" alt=""><div class="caption">Caption 1</div></div>
-            <div><img src="images/memory5_2.jpg" alt=""><div class="caption">Caption 2</div></div>
+            <img src="images/memory5_1.jpg" alt="">
+<img src="images/memory5_2.jpg" alt="">
+<img src="images/memory5_3.jpg" alt="">
         </div>
         <div class="audio-player">
             <audio controls autoplay>
