--- a/memory6.html
+++ b/memory6.html
@@ -11,8 +11,9 @@
         
         <h1>Facetimes - Jan - May</h1>
         <div class="gallery">
-            <div><img src="images/memory6_1.jpg" alt=""><div class="caption">Caption 1</div></div>
-            <div><img src="images/memory6_2.jpg" alt=""><div class="caption">Caption 2</div></div>
+            <img src="images/memory6_1.jpg" alt="">
+<img src="images/memory6_2.jpg" alt="">
+<img src="images/memory6_3.jpg" alt="">
         </div>
         <div class="audio-player">
             <audio controls autoplay>
