--- a/memory7.html
+++ b/memory7.html
@@ -11,8 +11,9 @@
         
         <h1>We Started Dating - May. 18</h1>
         <div class="gallery">
-            <div><img src="images/memory7_1.jpg" alt=""><div class="caption">Caption 1</div></div>
-            <div><img src="images/memory7_2.jpg" alt=""><div class="caption">Caption 2</div></div>
+            <img src="images/memory7_1.jpg" alt="">
+<img src="images/memory7_2.jpg" alt="">
+<img src="images/memory7_3.jpg" alt="">
         </div>
         <div class="audio-player">
             <audio controls autoplay>
