--- a/memory8.html
+++ b/memory8.html
@@ -11,8 +11,9 @@
         
         <h1>Family Beach Trip - May 31 - June 1</h1>
         <div class="gallery">
-            <div><img src="images/memory8_1.jpg" alt=""><div class="caption">Caption 1</div></div>
-            <div><img src="images/memory8_2.jpg" alt=""><div class="caption">Caption 2</div></div>
+            <img src="images/memory8_1.jpg" alt="">
+<img src="images/memory8_2.jpg" alt="">
+<img src="images/memory8_3.jpg" alt="">
         </div>
         <div class="audio-player">
             <audio controls autoplay>
