--- a/memory1.html
+++ b/memory1.html
@@ -8,7 +8,7 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    <h1>Memory 1</h1>
+    <h1>CAS Concert – September 17</h1>
     <div class="button-container">
         <button onclick="playMusic()">Play Music</button>
         <button onclick="goBack()">Back to Timeline</button>
