--- a/memory1.html
+++ b/memory1.html
@@ -18,6 +18,7 @@
         <img src="images/memory1_1.jpg" alt="Memory 1 photo 1">
         <img src="images/memory1_2.jpg" alt="Memory 1 photo 2">
         <img src="images/memory1_3.jpg" alt="Memory 1 photo 3">
+        <img src="images/memory1_4.jpg" alt="Memory 1 photo 4">
     </div>
 </body>
 </html>
