--- a/memory1.html
+++ b/memory1.html
@@ -4,21 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Memory 1</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script defer src="../js/script.js"></script>
 </head>
-<body>
-    <h1>CAS Concert – September 17</h1>
-    <div class="button-container">
-        <button onclick="playMusic()">Play Music</button>
-        <button onclick="goBack()">Back to Timeline</button>
+<body style="background-color: #fff0f5;">
+    <h1>Memory 1</h1>
+    <button onclick="document.getElementById('music').play()">Play Music</button>
+    <button onclick="goBack()">Return to Timeline</button>
+    <audio id="music" src="../music/placeholder1.mp3"></audio>
+    <div class="collage">
+        <!-- Add images manually like memory1_1.jpg, memory1_2.jpg, etc. -->
+        <img src="../images/memory1_1.jpg" style="width: 30%; margin: 10px;">
+        <img src="../images/memory1_2.jpg" style="width: 30%; margin: 10px;">
+        <img src="../images/memory1_3.jpg" style="width: 30%; margin: 10px;">
     </div>
-    <audio id="bg-music" src="music/memory1.mp3" loop></audio>
-    <div class="memory-collage">
-        <img src="images/memory1_1.jpg" alt="Memory 1 photo 1">
-        <img src="images/memory1_2.jpg" alt="Memory 1 photo 2">
-        <img src="images/memory1_3.jpg" alt="Memory 1 photo 3">
-        <img src="images/memory1_4.jpg" alt="Memory 1 photo 4">
-    </div>
+    <script>
+        function goBack() {
+            document.body.style.transition = "opacity 1s";
+            document.body.style.opacity = 0;
+            setTimeout(() => {
+                window.location.href = "../index.html";
+            }, 1000);
+        }
+    </script>
 </body>
 </html>
