--- a/index.html
+++ b/index.html
@@ -1,74 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Our Memories</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1 class="title">Our Memories</h1>
-  <div class="timeline-container">
-    <div class="timeline">
-      <!-- MEMORY CARDS: Add your previews and links -->
-      <div class="card top" onclick="goToMemory('memory1.html')">
-        <span class="date">Sept. 17</span>
-        <img src="images/memory1_1.jpg" alt="Memory 1 Preview" />
+  <header>
+    <h1 class="site-title">Our Memories</h1>
+  </header>
+
+  <main class="timeline-wrap">
+    <div class="timeline-line" aria-hidden="true"></div>
+
+    <div class="timeline" id="timeline">
+      <!-- 12 timeline items. Each has a preview image and a date (alternating top/bottom handled by CSS) -->
+      <!-- Make sure preview images exist at images/memoryX_preview.jpg -->
+      <div class="timeline-item top" data-target="memory1.html">
+        <div class="preview"><img src="images/memory1_preview.jpg" alt="CAS Concert preview"></div>
+        <div class="label">Sept. 17</div>
       </div>
-      <div class="card bottom" onclick="goToMemory('memory2.html')">
-        <span class="date">Sept. 21</span>
-        <img src="images/memory2_1.jpg" alt="Memory 2 Preview" />
+
+      <div class="timeline-item bottom" data-target="memory2.html">
+        <div class="label">Sept. 21</div>
+        <div class="preview"><img src="images/memory2_preview.jpg" alt="Homecoming preview"></div>
       </div>
-      <div class="card top" onclick="goToMemory('memory3.html')">
-        <span class="date">Oct. 14</span>
-        <img src="images/memory3_1.jpg" alt="Memory 3 Preview" />
+
+      <div class="timeline-item top" data-target="memory3.html">
+        <div class="preview"><img src="images/memory3_preview.jpg" alt="Canyon Lake preview"></div>
+        <div class="label">Oct. 14</div>
       </div>
-      <div class="card bottom" onclick="goToMemory('memory4.html')">
-        <span class="date">Nov. 24</span>
-        <img src="images/memory4_1.jpg" alt="Memory 4 Preview" />
+
+      <div class="timeline-item bottom" data-target="memory4.html">
+        <div class="label">Nov. 24</div>
+        <div class="preview"><img src="images/memory4_preview.jpg" alt="Austin day preview"></div>
       </div>
-      <div class="card top" onclick="goToMemory('memory5.html')">
-        <span class="date">Dec. 26</span>
-        <img src="images/memory5_1.jpg" alt="Memory 5 Preview" />
+
+      <div class="timeline-item top" data-target="memory5.html">
+        <div class="preview"><img src="images/memory5_preview.jpg" alt="Ice Skating preview"></div>
+        <div class="label">Dec. 26</div>
       </div>
-      <div class="card bottom" onclick="goToMemory('memory6.html')">
-        <span class="date">Jan - May</span>
-        <img src="images/memory6_1.jpg" alt="Memory 6 Preview" />
+
+      <div class="timeline-item bottom" data-target="memory6.html">
+        <div class="label">Jan–May</div>
+        <div class="preview"><img src="images/memory6_preview.jpg" alt="Facetimes preview"></div>
       </div>
-      <div class="card top" onclick="goToMemory('memory7.html')">
-        <span class="date">May 18</span>
-        <img src="images/memory7_1.jpg" alt="Memory 7 Preview" />
+
+      <div class="timeline-item top" data-target="memory7.html">
+        <div class="preview"><img src="images/memory7_preview.jpg" alt="We started dating preview"></div>
+        <div class="label">May 18</div>
       </div>
-      <div class="card bottom" onclick="goToMemory('memory8.html')">
-        <span class="date">May 31 - 32</span>
-        <img src="images/memory8_1.jpg" alt="Memory 8 Preview" />
+
+      <div class="timeline-item bottom" data-target="memory8.html">
+        <div class="label">May 31–Jun 1</div>
+        <div class="preview"><img src="images/memory8_preview.jpg" alt="Family beach preview"></div>
       </div>
-      <div class="card top" onclick="goToMemory('memory9.html')">
-        <span class="date">June 21</span>
-        <img src="images/memory9_1.jpg" alt="Memory 9 Preview" />
+
+      <div class="timeline-item top" data-target="memory9.html">
+        <div class="preview"><img src="images/memory9_preview.jpg" alt="1 month anniversary preview"></div>
+        <div class="label">Jun. 21</div>
       </div>
-      <div class="card bottom" onclick="goToMemory('memory10.html')">
-        <span class="date">July 17</span>
-        <img src="images/memory10_1.jpg" alt="Memory 10 Preview" />
+
+      <div class="timeline-item bottom" data-target="memory10.html">
+        <div class="label">Jul. 17</div>
+        <div class="preview"><img src="images/memory10_preview.jpg" alt="Birthday trip preview"></div>
       </div>
-      <div class="card top" onclick="goToMemory('memory11.html')">
-        <span class="date">Aug. 4</span>
-        <img src="images/memory11_1.jpg" alt="Memory 11 Preview" />
+
+      <div class="timeline-item top" data-target="memory11.html">
+        <div class="preview"><img src="images/memory11_preview.jpg" alt="Beach trip preview"></div>
+        <div class="label">Aug. 4</div>
       </div>
-      <div class="card bottom" onclick="goToMemory('memory12.html')">
-        <span class="date">Aug. 18</span>
-        <img src="images/memory12_1.jpg" alt="Memory 12 Preview" />
+
+      <div class="timeline-item bottom" data-target="memory12.html">
+        <div class="label">Aug. 18</div>
+        <div class="preview"><img src="images/memory12_preview.jpg" alt="3 month anniversary preview"></div>
       </div>
     </div>
-  </div>
+  </main>
 
-  <div id="sprites">
-    <img src="images/heart1.png" class="sprite" />
-    <img src="images/heart2.png" class="sprite" />
-    <img src="images/star.png" class="sprite" />
-  </div>
+  <!-- floating decorative sprites (use your own small pngs) -->
+  <div id="sprite-layer" aria-hidden="true"></div>
 
-  <div class="fade-overlay"></div>
+  <!-- full-page white overlay used for fade transitions -->
+  <div id="fade-overlay" aria-hidden="true"></div>
 
   <script src="js/script.js"></script>
 </body>
