--- a/memory8.html
+++ b/memory8.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Memory 8</title>
-  <link rel="stylesheet" href="css/memory.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Family Beach Trip — May 31–Jun 1</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-  <div class="memory-page">
-    <button id="backButton">← Return to Timeline</button>
-    <button id="musicButton">🎵 Toggle Music</button>
-    <div class="collage">
-      <img src="images/memory8_1.jpg" />
-      <img src="images/memory8_2.jpg" />
-      <img src="images/memory8_3.jpg" />
-      <img src="images/memory8_4.jpg" />
+<body class="memory-page">
+  <div class="memory-header">
+    <h2 class="memory-title">Family Beach Trip — May 31–Jun 1</h2>
+    <div class="controls">
+      <button class="btn btn-play">▶ Play / Pause</button>
+      <button class="btn btn-return">← Return to Timeline</button>
     </div>
-    <audio id="memoryMusic" src="audio/memory8.mp3" loop></audio>
   </div>
-  <script src="js/memory.js"></script>
+
+  <main class="masonry">
+    <div class="masonry-item"><img src="images/memory8_1.jpg" alt=""></div>
+    <div class="masonry-item"><img src="images/memory8_2.jpg" alt=""></div>
+    <div class="masonry-item"><img src="images/memory8_3.jpg" alt=""></div>
+  </main>
+
+  <audio class="memory-audio" src="music/memory8.mp3" preload="auto"></audio>
+
+  <div id="fade-overlay"></div>
+  <script src="js/script.js"></script>
 </body>
 </html>
