--- a/memory12.html
+++ b/memory12.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Memory 12</title>
-  <link rel="stylesheet" href="css/memory.css" />
-  <style>
-    .message {
-      text-align: center;
-      font-size: 2rem;
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 50px;
-      color: #d94e77;
-    }
-  </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Our 3 Month Anniversary</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-  <div class="memory-page">
-    <button id="backButton">← Return to Timeline</button>
-    <button id="musicButton">🎵 Toggle Music</button>
-    <div class="message">
-      Our 3 Month Anniversary!!<br><br>
+<body class="memory-page">
+  <div class="memory-header">
+    <h2 class="memory-title">Our 3 Month Anniversary!!</h2>
+    <div class="controls">
+      <button class="btn btn-play">▶ Play / Pause</button>
+      <button class="btn btn-return">← Return to Timeline</button>
+    </div>
+  </div>
+
+  <div class="final-message">
+    <p>
       I like you so much and I’m so thankful for every moment we’ve shared together 💖 Thank you for putting up with my bs all the time<br><br>
       Here’s to many more memories ahead 💫
-    </div>
-    <audio id="memoryMusic" src="audio/memory12.mp3" loop></audio>
+    </p>
   </div>
-  <script src="js/memory.js"></script>
+
+  <audio class="memory-audio" src="music/memory12.mp3" preload="auto"></audio>
+
+  <div id="fade-overlay"></div>
+  <script src="js/script.js"></script>
 </body>
 </html>
