--- a/memory12.html
+++ b/memory12.html
@@ -18,7 +18,8 @@
   <div class="final-message">
     <p>
       Three months already — and each day has been better than the last.  
-      I love you endlessly. Thank you for everything. 💖
+      I appretiate you putting up with my bs. Thank you for everything 💖
+      Here's to 3 more happy months 😘
     </p>
   </div>
 
