--- a/memory2.html
+++ b/memory2.html
@@ -19,6 +19,7 @@
     <div class="masonry-item"><img src="images/memory2_1.jpg" alt="Memory 2"></div>
     <div class="masonry-item"><img src="images/memory2_2.jpg" alt="Memory 2"></div>
     <div class="masonry-item"><img src="images/memory2_3.jpg" alt="Memory 2"></div>
+    <div class="masonry-item"><img src="images/memory2_4.jpg" alt="Memory 2"></div>
   </div>
 
   <audio id="bg-music" loop>
